# SoftRenderer

./: CMakeLists.txt  README.md  main.cpp
include/: Buffer.hpp  Defines.h  Foundation.h  Renderer.hpp  VoronoiDiagram.h
opencv/lib/: OpenCVConfig-version.cmake  OpenCVConfig.cmake  OpenCVModules-debug.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
source/: Foundation.cpp  Renderer.cpp  VoronoiDiagram.cpp
